# cc-maya-base_locator

./: .gitignore  LICENSE  README.md
make/: CMakeLists.txt  build_linux.sh  build_osx.sh  build_win.ps1  info.txt
make/src/: AETemplate.h  BaseLoc.cpp  BaseLoc.h  BaseLocCommand.cpp  BaseLocCommand.h  BaseLocIcons.h  CMakeLists.txt  PluginMain.cpp  icons.h
mel/: baseLocator_AETemplate.mel  baseLocator_shelf.mel
presets/: sphere.blp  torus.blp
src/: AETemplate.h  BaseLoc.cpp  BaseLoc.h  BaseLocCommand.cpp  BaseLocCommand.h  BaseLocIcons.h  PluginMain.cpp  Utils.h  icons.h
